runtime/Gaffer.Runtime.Tests/snapshots/ErrorTests.ProjectionTransformError.verified.txt
Transform error

error: transform failed
    ┌─ 5:8
    │
  3 │ 	Test: function(s, e) { return s; }
  4 │ }).transformBy(function(s) {
  5 │ 	throw new Error("transform failed");
    │ 	      ^ transform failed
    │
  at projection.js:5:8
  at projection.js:6:16
